fixing overlap

--- a/src/components/HeroImgStyles.css
+++ b/src/components/HeroImgStyles.css
@@ -37,7 +37,7 @@
 }
 .hero .content h1 {
     font-size: 4pm;
-    padding: 0.5em 0 1.5rem;
+    padding: 0.6em 0 1.5rem;
 }
 
 
